--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "@types/react-table": "^7.7.5",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-react": "^1.1.7",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "gh-pages": "^3.2.3",
     "react-table": "^7.7.0"
   }
